--- a/site.html
+++ b/site.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>BOOGEYBOTS</title>
+        <title>BOOGEYBOTS WEBSITE</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="site.css">
@@ -21,4 +21,4 @@
        <p>Echipa BOOGEYBOTS</p>
         <script src="" async defer></script>
     </body>
-</html>
+</html> 
