--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>BOOGEYBOTS WEBSITE</title>
-        <meta name="description" content="">
+        <title>BoogeyBots</title>
+        <meta name="description" content="Site-ul echipei BoogeyBots">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="site.css">
     </head>
     <body>
-        <!--[if lt IE 7]> 
+        <!--[if lt IE 7]>  
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="https://www.mozilla.org/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <h1 style="font-size:60px;"> <strong>BOOGEYBOTS</strong> <br> </h1>
