--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <!--[if lt IE 7]>  
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="https://www.mozilla.org/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h1 style="font-size:60px;"> <strong>BOOGEYBOTS</strong> <br> </h1>
+
+        <h1> <strong>BOOGEYBOTS</strong> <br> </h1>
         <img src="logo.jfif" alt="logo" style="width: 600px; height: 600px;"> 
 
        <p>Echipa BOOGEYBOTS</p>
