--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>BoogeyBots</title>
-        <meta name="description" content="Site-ul echipei BoogeyBots">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="site.css">
-    </head>
-    <body>
-        <!--[if lt IE 7]>  
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="https://www.mozilla.org/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
 
-        <h1> <strong>BOOGEYBOTS</strong> <br> </h1>
-        <img src="logo.jfif" alt="logo" style="width: 600px; height: 600px;"> 
+<html class="no-js">
 
-       <p>Echipa BOOGEYBOTS</p>
-        <script src="" async defer></script>
-    </body>
-</html> 
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>BoogeyBots</title>
+    <meta name="description" content="Site-ul echipei BoogeyBots">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="site.css">
+</head>
+
+<body>
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">Our Team</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+    </div>
+
+    <div class="container">
+        <div class="text_img"><strong>BOOGEYBOTS</strong></div>
+        <img src="logo.jfif" alt="logo">
+    </div>
+
+
+
+    <p>Echipa BOOGEYBOTS</p>
+</body>
+
+</html>
