Add some cards to our team

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="nav-wrapper black lighten-1">
             <a href="#" class="navbar-brand"><img src="boogey_logo.jpg"> </a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="#">Our Team</a></li>
+                <li><a href="our_team.html">Our Team</a></li>
                 <li><a href="#">Contact Us</a></li>
                 <li><a href="#">About Us</a></li>
             </ul>
