--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="description" content="Site-ul echipei de robotică BoogeyBots">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -19,14 +21,27 @@
 
     <nav>
         <div class="nav-wrapper black lighten-1">
-            <a href="#" class="navbar-brand"><img src="boogey_logo.jpg"> </a>
+            <a href="index.html" class="navbar-brand"><img src="boogey_logo_png.png"> </a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="our_team.html">Our Team</a></li>
                 <li><a href="#">Contact Us</a></li>
                 <li><a href="#">About Us</a></li>
+                <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "right fa fa-facebook"></i></a></li>
+                <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "right fa fa-instagram"></i></a></li>
             </ul>
+
         </div>
     </nav>
+
+    <ul id="mobile-demo" class="sidenav">
+        <li><a href="our_team.html">Our Team</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "left fa fa-facebook"></i></a></li>
+        <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "left fa fa-instagram"></i></a></li>
+    </ul>
 
     <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
