Improve the way the logo looks on mobile(kinda)

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <li><a href="our_team.html">Our Team</a></li>
         <li><a href="#">Contact Us</a></li>
         <li><a href="#">About Us</a></li>
-        <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "left fa fa-facebook"></i></a></li>
-        <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "left fa fa-instagram"></i></a></li>
+        <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "left fa fa-facebook"></i></a></li>
+        <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "left fa fa-instagram"></i></a></li>
     </ul>
 
     <div id="index-banner" class="parallax-container">
@@ -51,9 +51,7 @@
                 <div class="row center">
                     <h5 class="header col s12 deep-orange-text">Echipa de robotică a Colegiului Național "Alexandru Vlahuță"</h5>
                 </div>
-                <div class="row center">
-                    <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
-                </div>
+
                 <br><br>
 
             </div>
