--- a/our_team.html
+++ b/our_team.html
@@ -19,16 +19,15 @@
 <body>
     <nav>
         <div class="nav-wrapper black lighten-1">
-            <a href="index.html" class="navbar-brand"><img src="boogey_logo_png.png
-                "> </a>
+            <a href="index.html" class="navbar-brand"><img src="boogey_logo_png.png"> </a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="our_team.html">Our Team</a></li>
                 <li><a href="#">Contact Us</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "right fa fa-facebook"></i></a></li>
-                <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "right fa fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "right fa fa-facebook"></i></a></li>
+                <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "right fa fa-instagram"></i></a></li>
             </ul>
 
         </div>
@@ -49,7 +48,7 @@
 
         <div class="row">
             <div class="col s6 m3">
-                <div class="card medium">
+                <div class="card hoverable medium">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img src="sergiu.jpg" class="activator">
                     </div>
@@ -68,7 +67,7 @@
             </div>
 
             <div class="col s6 m3">
-                <div class="card medium">
+                <div class="card hoverable medium">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img src="nicusor.jpg" class="activator">
                     </div>
@@ -89,7 +88,7 @@
             </div>
 
             <div class="col s6 m3">
-                <div class="card medium">
+                <div class="card hoverable medium">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img src="costelush.jpg" class="activator">
                     </div>
@@ -110,7 +109,7 @@
             </div>
 
             <div class="col s6 m3">
-                <div class="card medium">
+                <div class="card hoverable medium">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img src="bogdan.jpg" class="activator">
                     </div>
