Improve the way the logo looks on mobile [FOR REAL !!!]

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <nav>
         <div class="nav-wrapper black lighten-1">
-            <a href="index.html" class="navbar-brand"><img src="boogey_logo_png.png"> </a>
+            <a href="index.html" class="brand-logo"><img src="boogey_logo_png.png"> </a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
             <ul id="nav-mobile" class="right hide-on-med-and-down">
