--- a/our_team.html
+++ b/our_team.html
@@ -58,7 +58,10 @@
                         <h6 class="center-align">Mare Programator</h6>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title red-text text-darken-4 center-align">SERGIU MARTON
+                        <span class="card-title red-text text-darken-4 center-align">
+                            <i class="material-icons right">close</i>
+                            <br>
+                            SERGIU MARTON
                             <a href = "https://github.com/brown121407" target="_blank"><p class = "center">
                             <i class="fa fa-github"></i></p>
                         </a>
@@ -77,7 +80,10 @@
                         <h6 class="center-align">Programator Chef</h6>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title red-text text-darken-4 center-align">NICUȘOR CRUCERU
+                        <span class="card-title red-text text-darken-4 center-align">
+                            <i class="material-icons right">close</i>
+                            <br>
+                            NICUȘOR CRUCERU
                             <a href = "https://github.com/nicusor43" target="_blank"><p class = "center">
                             <i class="fa fa-github"></i></p>
                             <a href = "https://www.instagram.com/nicusor_43/?hl=ro" target="_blank"><p class = "center">
@@ -98,7 +104,10 @@
                         <h6 class="center-align">Șeful la Șeful Șefilor</h6>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title red-text text-darken-4 center-align">COSTEL PETREA
+                        <span class="card-title red-text text-darken-4 center-align">
+                            <i class="material-icons right">close</i>
+                            <br>
+                            COSTEL PETREA
                             <a href = "https://www.facebook.com/profile.php?id=100008522895417" target="_blank"><p class = "center">
                             <i class="fa fa-facebook"></i></p>
                             <a href = "https://www.instagram.com/costelpetrea/?hl=ro" target="_blank"><p class = "center">
@@ -119,7 +128,10 @@
                         <h6 class="center-align">Șeful Șefilor</h6>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title red-text text-darken-4 center-align">CARP BOGDAN
+                        <span class="card-title red-text text-darken-4 center-align">
+                            <i class="material-icons right">close</i>
+                            <br>
+                            CARP BOGDAN
                             <a href = "https://www.facebook.com/bogdan.carp.94" target="_blank"><p class = "center">
                             <i class="fa fa-facebook"></i></p>
                             <a href = "https://www.instagram.com/brev.404/?hl=ro" target="_blank"><p class = "center">
