Make the navbar black

--- a/our_team.html
+++ b/our_team.html
@@ -19,7 +19,7 @@
 <body>
     <nav>
         <div class="nav-wrapper black lighten-1">
-            <a href="index.html" class="brand-logo"><img src="boogey_logo_png.png"> </a>
+            <a href="index.html" class="brand-logo"><img src="bogey_logo_alb.png"> </a>
 
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
