--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
 
     <nav>
         <div class="nav-wrapper black lighten-1">
-            <a href="index.html" class="brand-logo"><img src="boogey_logo_png.png"> </a>
+            <a href="index.html" class="brand-logo"><img src="bogey_logo_alb.png"> </a>
+
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="our_team.html">Our Team</a></li>
                 <li><a href="#">Contact Us</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "right fa fa-facebook"></i></a></li>
-                <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "right fa fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "right fa fa-facebook"></i></a></li>
+                <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "right fa fa-instagram"></i></a></li>
             </ul>
 
         </div>
@@ -39,8 +40,8 @@
         <li><a href="our_team.html">Our Team</a></li>
         <li><a href="#">Contact Us</a></li>
         <li><a href="#">About Us</a></li>
-        <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "left fa fa-facebook"></i></a></li>
-        <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "left fa fa-instagram"></i></a></li>
+        <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "left fa fa-facebook"></i></a></li>
+        <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "left fa fa-instagram"></i></a></li>
     </ul>
 
     <div id="index-banner" class="parallax-container">
