--- a/our_team.html
+++ b/our_team.html
@@ -24,7 +24,7 @@
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="our_team.html">Our Team</a></li>
+                <li><a href="our_team.html" class="active">Our Team</a></li>
                 <li><a href="#">Contact Us</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "right fa fa-facebook"></i></a></li>
@@ -35,7 +35,7 @@
     </nav>
 
     <ul id="mobile-demo" class="sidenav">
-        <li><a href="our_team.html">Our Team</a></li>
+        <li><a href="our_team.html" class="active">Our Team</a></li>
         <li><a href="#">Contact Us</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "left fa fa-facebook"></i></a></li>
@@ -135,6 +135,29 @@
                             <a href = "https://www.facebook.com/bogdan.carp.94" target="_blank"><p class = "center">
                             <i class="fa fa-facebook"></i></p>
                             <a href = "https://www.instagram.com/brev.404/?hl=ro" target="_blank"><p class = "center">
+                                <i class="fa fa-instagram"></i></p></a>
+                        </a>
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col s6 m3">
+                <div class="card hoverable medium">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img src="images/rares_done.jpg" class="activator">
+                    </div>
+                    <div class="card-content">
+                        <h5 class="red-text text-darken-4 center-align">RAREȘ DONE</h5>
+                        <h6 class="center-align">El e cel mai mare hoț din echipa Boogeybots</h6>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title red-text text-darken-4 center-align">
+                            <i class="material-icons right">close</i>
+                            <br>
+                            RAREȘ DONE
+                            
+                            <a href = "https://www.instagram.com/donerares/?hl=ro" target="_blank"><p class = "center">
                                 <i class="fa fa-instagram"></i></p></a>
                         </a>
                         </span>
