--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -43,6 +44,8 @@
         <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "left fa fa-facebook"></i></a></li>
         <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "left fa fa-instagram"></i></a></li>
     </ul>
+
+
 
     <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
