--- a/our_team.html
+++ b/our_team.html
@@ -51,7 +51,7 @@
             <div class="col s6 m3">
                 <div class="card hoverable medium">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img src="sergiu.jpg" class="activator">
+                        <img src="sergiu.jpg" class="activator ">
                     </div>
                     <div class="card-content">
                         <h5 class="red-text text-darken-4 center-align">SERGIU MARTON</h5>
@@ -73,7 +73,7 @@
             <div class="col s6 m3">
                 <div class="card hoverable medium">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img src="nicusor.jpg" class="activator">
+                        <img src="nicusor.jpg" class="activator ">
                     </div>
                     <div class="card-content">
                         <h5 class="red-text text-darken-4 center-align">NICUȘOR CRUCERU</h5>
@@ -149,7 +149,7 @@
                     </div>
                     <div class="card-content">
                         <h5 class="red-text text-darken-4 center-align">RAREȘ DONE</h5>
-                        <h6 class="center-align">El e cel mai mare hoț din echipa Boogeybots</h6>
+                        <h6 class="center-align">Photoshoapparu sef</h6>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title red-text text-darken-4 center-align">
