--- a/our_team.html
+++ b/our_team.html
@@ -54,11 +54,11 @@
                         <img src="sergiu.jpg" class="activator ">
                     </div>
                     <div class="card-content">
-                        <h5 class="red-text text-darken-4 center-align">SERGIU MARTON</h5>
+                        <h5 class="card-title activator red-text text-darken-4 center-align">SERGIU MARTON</h5>
                         <h6 class="center-align">Mare Programator</h6>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title red-text text-darken-4 center-align">
+                        <span class="card-title  red-text text-darken-4 center-align ">
                             <i class="material-icons right">close</i>
                             <br>
                             SERGIU MARTON
