but for all of the cards

--- a/our_team.html
+++ b/our_team.html
@@ -71,12 +71,12 @@
             </div>
 
             <div class="col s12 m3">
-                <div class="card hoverable medium">
+                <div class="card activator hoverable medium">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img src="nicusor.jpg" class="activator ">
                     </div>
                     <div class="card-content">
-                        <h5 class="red-text text-darken-4 center-align">NICUȘOR CRUCERU</h5>
+                        <h5 class="card-title activator red-text text-darken-4 center-align">NICUȘOR CRUCERU</h5>
                         <h6 class="center-align">Programator Chef</h6>
                     </div>
                     <div class="card-reveal">
@@ -100,7 +100,7 @@
                         <img src="costelush.jpg" class="activator">
                     </div>
                     <div class="card-content">
-                        <h5 class="red-text text-darken-4 center-align">COSTEL PETREA</h5>
+                        <h5 class="card-title activator red-text text-darken-4 center-align">COSTEL PETREA</h5>
                         <h6 class="center-align">Șeful la Șeful Șefilor</h6>
                     </div>
                     <div class="card-reveal">
@@ -124,7 +124,7 @@
                         <img src="bogdan.jpg" class="activator">
                     </div>
                     <div class="card-content">
-                        <h5 class="red-text text-darken-4 center-align">CARP BOGDAN</h5>
+                        <h5 class="card-title activator red-text text-darken-4 center-align">CARP BOGDAN</h5>
                         <h6 class="center-align">Șeful Șefilor</h6>
                     </div>
                     <div class="card-reveal">
@@ -148,7 +148,7 @@
                         <img src="images/rares_done.jpg" class="activator">
                     </div>
                     <div class="card-content">
-                        <h5 class="red-text text-darken-4 center-align">RAREȘ DONE</h5>
+                        <h5 class="card-title activator red-text text-darken-4 center-align">RAREȘ DONE</h5>
                         <h6 class="center-align">Photoshoapparu sef</h6>
                     </div>
                     <div class="card-reveal">
