make the insta logo actually redirect to our page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="#">Contact Us</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "right fa fa-facebook"></i></a></li>
-                <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "right fa fa-instagram"></i></a></li>
+                <li><a href="https://www.instagram.com/BoogeyBots/" target="_blank"><i class = "right fa fa-instagram"></i></a></li>
             </ul>
 
         </div>
