add a kind of introduction i guess?

--- a/index.html
+++ b/index.html
@@ -42,23 +42,26 @@
         <li><a href="#">Contact Us</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "left fa fa-facebook"></i></a></li>
-        <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "left fa fa-instagram"></i></a></li>
+        <li><a href="https://www.instagram.com/BoogeyBots/"><i class = "left fa fa-instagram"></i></a></li>
     </ul>
+
+    <div class="container">
+        <h3 class="header center black-text text-darken-4" id="logo_content">
+            <img class="responsive-img" id="logo-content" src="boogey_logo_real.png"> <br>{We are not programmed to give up}
+        </h3>
+        <br><br><br>
+        <h2 class="header center red-text text-darken-4">Noi suntem BoogeyHotz</h2>
+        <br>
+        <hr>
+        <br>
+        <h4 class="center black-text text-darken-4">Misiunea BoogeyHotz a inceput atunci cand idk ...bla bla <br></h4>
+
+    </div>
 
 
 
     <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
-            <div class="container">
-                <br><br>
-                <h1 class="header center red-text text-darken-4">BoogeyBots</h1>
-                <div class="row center">
-                    <h5 class="header col s12 deep-orange-text">Echipa de robotică a Colegiului Național "Alexandru Vlahuță"</h5>
-                </div>
-
-                <br><br>
-
-            </div>
         </div>
         <div class="parallax"><img src="brickbot_demo.jpg" alt="Unsplashed background img 1"></div>
     </div>
