--- a/our_team.html
+++ b/our_team.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="card-reveal">
                         <span class="card-title  red-text text-darken-4 center-align ">
-                            <i class="material-icons right">close</i>
+                            <i class="small material-icons right">close</i>
                             <br>
                             SERGIU MARTON
                             <a href = "https://github.com/brown121407" target="_blank"><p class = "center">
@@ -81,7 +81,7 @@
                     </div>
                     <div class="card-reveal">
                         <span class="card-title red-text text-darken-4 center-align">
-                            <i class="material-icons right">close</i>
+                            <i class="small material-icons right">close</i>
                             <br>
                             NICUȘOR CRUCERU
                             <a href = "https://github.com/nicusor43" target="_blank"><p class = "center">
@@ -105,7 +105,7 @@
                     </div>
                     <div class="card-reveal">
                         <span class="card-title red-text text-darken-4 center-align">
-                            <i class="material-icons right">close</i>
+                            <i class="small material-icons right">close</i>
                             <br>
                             COSTEL PETREA
                             <a href = "https://www.facebook.com/profile.php?id=100008522895417" target="_blank"><p class = "center">
@@ -129,7 +129,7 @@
                     </div>
                     <div class="card-reveal">
                         <span class="card-title red-text text-darken-4 center-align">
-                            <i class="material-icons right">close</i>
+                            <i class="small material-icons right">close</i>
                             <br>
                             CARP BOGDAN
                             <a href = "https://www.facebook.com/bogdan.carp.94" target="_blank"><p class = "center">
@@ -153,7 +153,7 @@
                     </div>
                     <div class="card-reveal">
                         <span class="card-title red-text text-darken-4 center-align">
-                            <i class="material-icons right">close</i>
+                            <i class="small material-icons right">close</i>
                             <br>
                             RAREȘ DONE
                             
