--- a/index.html
+++ b/index.html
@@ -45,19 +45,28 @@
         <li><a href="https://www.instagram.com/BoogeyBots/"><i class = "left fa fa-instagram"></i></a></li>
     </ul>
 
+    <br>
+    <br>
     <div class="container">
-        <h3 class="header center black-text text-darken-4" id="logo_content">
-            <img class="responsive-img" id="logo-content" src="boogey_logo_real.png"> <br>{We are not programmed to give up}
-        </h3>
-        <br><br><br>
-        <h2 class="header center red-text text-darken-4">Noi suntem BoogeyHotz</h2>
-        <br>
-        <hr>
-        <br>
-        <h4 class="center black-text text-darken-4">Misiunea BoogeyHotz a inceput atunci cand idk ...bla bla <br></h4>
+        <div class="row">
+            <div class="col s12 m8">
+                <h2 class="header center red-text text-darken-4">Noi suntem BoogeyBots</h2>
+                <br>
+                <hr>
+                <br>
+                <h4 class="center black-text text-darken-4">Misiunea BoogeyHotz a inceput atunci cand idk ...bla bla<br></h4>
+                <br><br><br>
+            </div>
+            <div class="col s12 m4">
+                <h3 class=" center black-text text-darken-4" id="logo_content">
+                    <br>
+                    <img class="responsive-img" id="logo-content" src="boogey_logo_real.png">
+                </h3>
+                <br><br><br>
+            </div>
 
+        </div>
     </div>
-
 
 
     <div id="index-banner" class="parallax-container">
