--- a/our_team.html
+++ b/our_team.html
@@ -165,6 +165,28 @@
                 </div>
             </div>
 
+            <div class="col s12 m3">
+                <div class="card hoverable medium">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img src="nicu.jpg" class="activator">
+                    </div>
+                    <div class="card-content">
+                        <h5 class="card-title activator red-text text-darken-4 center-align">NICU CIOCÎRLAN</h5>
+                        <h6 class="center-align">Inginerul Sârmă</h6>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title red-text text-darken-4 center-align">
+                            <i class="small material-icons right">close</i>
+                            <br>
+                            NICU CIOCÎRLAN                           
+                            <a href = "https://www.instagram.com/nicu_20/?hl=ro" target="_blank"><p class = "center">
+                                <i class="fa fa-instagram"></i></p></a>
+                        </a>
+                        </span>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
 
