add animation on the icons

--- a/our_team.html
+++ b/our_team.html
@@ -47,6 +47,9 @@
             <h2 class="header col s12 dark">Our Team</h2>
         </div>
 
+        <hr>
+        <br><br>
+
         <div class="row">
             <div class="col s12 m3">
                 <div class="card hoverable medium">
@@ -63,7 +66,7 @@
                             <br>
                             SERGIU MARTON
                             <a href = "https://github.com/brown121407" target="_blank"><p class = "center">
-                            <i class="fa fa-github"></i></p>
+                            <i class="small fa fa-github"></i></p>
                         </a>
                         </span>
                     </div>
@@ -85,9 +88,9 @@
                             <br>
                             NICUȘOR CRUCERU
                             <a href = "https://github.com/nicusor43" target="_blank"><p class = "center">
-                            <i class="fa fa-github"></i></p>
+                            <i class="small fa fa-github"></i></p>
                             <a href = "https://www.instagram.com/nicusor_43/?hl=ro" target="_blank"><p class = "center">
-                                <i class="fa fa-instagram"></i></p></a>
+                                <i class="small fa fa-instagram"></i></p></a>
                         </a>
                         </span>
                     </div>
@@ -109,9 +112,9 @@
                             <br>
                             COSTEL PETREA
                             <a href = "https://www.facebook.com/profile.php?id=100008522895417" target="_blank"><p class = "center">
-                            <i class="fa fa-facebook"></i></p>
+                            <i class="small fa fa-facebook"></i></p>
                             <a href = "https://www.instagram.com/costelpetrea/?hl=ro" target="_blank"><p class = "center">
-                                <i class="fa fa-instagram"></i></p></a>
+                                <i class="small fa fa-instagram"></i></p></a>
                         </a>
                         </span>
                     </div>
@@ -133,9 +136,9 @@
                             <br>
                             CARP BOGDAN
                             <a href = "https://www.facebook.com/bogdan.carp.94" target="_blank"><p class = "center">
-                            <i class="fa fa-facebook"></i></p>
+                            <i class="small fa fa-facebook"></i></p>
                             <a href = "https://www.instagram.com/brev.404/?hl=ro" target="_blank"><p class = "center">
-                                <i class="fa fa-instagram"></i></p></a>
+                                <i class="small fa fa-instagram"></i></p></a>
                         </a>
                         </span>
                     </div>
@@ -158,7 +161,7 @@
                             RAREȘ DONE
                             
                             <a href = "https://www.instagram.com/donerares/?hl=ro" target="_blank"><p class = "center">
-                                <i class="fa fa-instagram"></i></p></a>
+                                <i class="small fa fa-instagram"></i></p></a>
                         </a>
                         </span>
                     </div>
@@ -180,7 +183,7 @@
                             <br>
                             NICU CIOCÎRLAN                           
                             <a href = "https://www.instagram.com/nicu_20/?hl=ro" target="_blank"><p class = "center">
-                                <i class="fa fa-instagram"></i></p></a>
+                                <i class="small fa fa-instagram"></i></p></a>
                         </a>
                         </span>
                     </div>
