improve the look of the navbar

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <li><a href="our_team.html">Our Team</a></li>
         <li><a href="#">Contact Us</a></li>
         <li><a href="#">About Us</a></li>
-        <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "left fa fa-facebook"></i></a></li>
-        <li><a href="https://www.instagram.com/BoogeyBots/"><i class = "left fa fa-instagram"></i></a></li>
+        <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "small left fa fa-facebook"></i></a></li>
+        <li><a href="https://www.instagram.com/BoogeyBots/"><i class = "small left fa fa-instagram"></i></a></li>
     </ul>
 
     <br>
