--- a/our_team.html
+++ b/our_team.html
@@ -27,8 +27,8 @@
                 <li><a href="our_team.html" class="active">Our Team</a></li>
                 <li><a href="#">Contact Us</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "right fa fa-facebook"></i></a></li>
-                <li><a href="https://www.instagram.com/BoogeyBots/" target="_blank"><i class = "right fa fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = " right fa fa-facebook"></i></a></li>
+                <li><a href="https://www.instagram.com/BoogeyBots/" target="_blank"><i class =" right fa fa-instagram"></i></a></li>
             </ul>
 
         </div>
@@ -38,8 +38,8 @@
         <li><a href="our_team.html" class="active">Our Team</a></li>
         <li><a href="#">Contact Us</a></li>
         <li><a href="#">About Us</a></li>
-        <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "left fa fa-facebook"></i></a></li>
-        <li><a href="https://www.instagram.com/BoogeyBots/"><i class = "left fa fa-instagram"></i></a></li>
+        <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "small left fa fa-facebook"></i></a></li>
+        <li><a href="https://www.instagram.com/BoogeyBots/"><i class = "small left fa fa-instagram"></i></a></li>
     </ul>
 
     <div class="container">
