make the navbar sticky + add getica to 'sponsori'

--- a/index.html
+++ b/index.html
@@ -19,23 +19,24 @@
 
 <body>
 
+    <div class="navbar-fixed">
+        <nav>
+            <div class="nav-wrapper black lighten-1 z-depth-2">
+                <a href="index.html" class="brand-logo"><img src="bogey_logo_alb.png"> </a>
 
-    <nav>
-        <div class="nav-wrapper black lighten-1 z-depth-2">
-            <a href="index.html" class="brand-logo"><img src="bogey_logo_alb.png"> </a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
-            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="our_team.html">Our Team</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "right fa fa-facebook"></i></a></li>
+                    <li><a href="https://www.instagram.com/BoogeyBots/" target="_blank"><i class = "right fa fa-instagram"></i></a></li>
+                </ul>
 
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="our_team.html">Our Team</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "right fa fa-facebook"></i></a></li>
-                <li><a href="https://www.instagram.com/BoogeyBots/" target="_blank"><i class = "right fa fa-instagram"></i></a></li>
-            </ul>
-
-        </div>
-    </nav>
+            </div>
+        </nav>
+    </div>
 
     <ul id="mobile-demo" class="sidenav">
         <li><a href="our_team.html">Our Team</a></li>
@@ -73,6 +74,17 @@
         <div class="section no-pad-bot">
         </div>
         <div class="parallax"><img src="brickbot_demo.jpg" alt="Unsplashed background img 1"></div>
+    </div>
+
+    <div class="container">
+        <h2 class="header center black-text"> SPONSORI</h2>
+        <hr class="short-hr">
+        <div class="row">
+            <div class="col s12 m10 pull-s1">
+                <h4 class="valign-wrapper">
+                    <img src="sigla-getica.jpg" class="responsive-img"></div>
+            </h4>
+        </div>
     </div>
 
 
