--- a/index.html
+++ b/index.html
@@ -88,19 +88,19 @@
     </div>
 
 
-    <div class="container">
-        <div class="section">
-
+    <footer class="page-footer black">
+        <div class="container">
             <div class="row">
-                <div class="col s12 center">
-                    <h3><i class="mdi-content-send brown-text"></i></h3>
-                    <h4>Contact Us</h4>
-                    <p class="left-align light">Contactati ne la nr de telfon 074 blabla</p>
+                <div class="col l6 s12">
+                    <h5 class="red-text darken-4">BoogeyBots</h5>
+                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
                 </div>
-            </div>
 
+            </div>
         </div>
-    </div>
+
+    </footer>
+
 
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
