--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="red-text darken-4">BoogeyBots</h5>
-                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                    <p class="grey-text text-lighten-4">//contact ; //link-ftc ; //link-github</p>
                 </div>
 
             </div>
