add an 'x' to the sidenav

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
     </div>
 
     <ul id="mobile-demo" class="sidenav">
+        <li>
+            <a href="#!" class="sidenav-close"> <i class="small material-icons white-text">close</i>
+            </a>
+        </li>
         <li><a href="our_team.html">Our Team</a></li>
         <li><a href="#">Contact Us</a></li>
         <li><a href="#">About Us</a></li>
