--- a/index.html
+++ b/index.html
@@ -112,20 +112,56 @@
         </div>
     </div>
 
-
-    <footer class="page-footer black">
+    <!--
+    <footer class="page-footer grey darken-4">
         <div class="container">
             <div class="row">
-                <div class="col l6 s12">
-                    <h5 class="red-text darken-4">BoogeyBots</h5>
-                    <p class="grey-text text-lighten-4">//contact ; //link-ftc ; //link-github</p>
+                <div class="col l4 s10 push-l4">
+                    <h4 class="header center white-text">CONTACT</h4>
+                    <p class="center grey-text text-lighten-4"><a href="tel:074">Numarul mentorului(?): 074</a></p>
+                    <p class="center"> boogeybots@gmail.com</p>
                 </div>
 
             </div>
         </div>
-
     </footer>
+-->
+    <footer class="page-footer grey darken-4">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12 offset-s2">
+                    <h4 class="white-text">Contact</h4>
+                    <h6 class="grey-text text-lighten-4">+4072334585475847435</h6>
+                    <h6 class="grey-text text-lighten-4">boogeybots@gmail.com</h6>
 
+                </div>
+                <div class="col l4 offset-l2 s12 offset-s2">
+                    <h4 class=" white-text">Useful Links</h4>
+
+                    <ul>
+                        <li>
+                            <h6><a class="blue-text text-darken-2" href="https://www.firstinspires.org/robotics/ftc" target="_blank">More About FTC</a> </h6>
+                        </li>
+                        <li>
+                            <h6><a class="blue-text text-darken-2" href="https://github.com/BoogeyBots/Website" target="_blank">The code for this website</a> </h6>
+                        </li>
+                        <li>
+                            <span>
+                                <a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "white-text small left fa fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/BoogeyBots/" target = "_blank"><i class = "white-text small fa fa-instagram"></i></a>
+                            </span>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2020 BoogeyBots lmao
+            </div>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
