add footer to 'our team'

--- a/index.html
+++ b/index.html
@@ -112,20 +112,8 @@
         </div>
     </div>
 
-    <!--
-    <footer class="page-footer grey darken-4">
-        <div class="container">
-            <div class="row">
-                <div class="col l4 s10 push-l4">
-                    <h4 class="header center white-text">CONTACT</h4>
-                    <p class="center grey-text text-lighten-4"><a href="tel:074">Numarul mentorului(?): 074</a></p>
-                    <p class="center"> boogeybots@gmail.com</p>
-                </div>
 
-            </div>
-        </div>
-    </footer>
--->
+
     <footer class="page-footer grey darken-4">
         <div class="container">
             <div class="row">
@@ -158,7 +146,7 @@
         </div>
         <div class="footer-copyright">
             <div class="container">
-                © 2020 BoogeyBots lmao
+                © 2020 BoogeyBots
             </div>
         </div>
     </footer>
