turn the getica photo into a link

--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
         <div class="row">
             <div class="col s12 m10 pull-s1">
                 <h4 class="valign-wrapper">
-                    <img src="sigla-getica.jpg" class="responsive-img"></div>
+                    <a href="http://getica95.ro/" target="_blank"><img src="sigla-getica.jpg" class="responsive-img"></a>
+            </div>
             </h4>
         </div>
     </div>
