--- a/index.html
+++ b/index.html
@@ -105,11 +105,15 @@
         <h2 class="header center black-text"> SPONSORI</h2>
         <hr class="short-hr">
         <div class="row">
-            <div class="col s12 m10 pull-s1">
-                <h4 class="valign-wrapper">
+            <div class="col s12 m8 pull-s1 push-m1">
+                <h4>
                     <a href="http://getica95.ro/" target="_blank"><img src="sigla-getica.jpg" class="responsive-img"></a>
+                </h4>
             </div>
-            </h4>
+            <br><br><br>
+            <div class="col s12 m2 push-m2 push-s2">
+                <a href="https://colegiulvlahuta.ro" target="_blank"><img src="vlahuta_logo.jpg" class="responsive-img"> </a>
+            </div>
         </div>
     </div>
 
