--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                     <a href="http://getica95.ro/" target="_blank"><img src="sigla-getica.jpg" class="responsive-img"></a>
                 </h4>
             </div>
-            <br><br><br>
+
             <div class="col s12 m2 push-m2 push-s2">
-                <a href="https://colegiulvlahuta.ro" target="_blank"><img src="vlahuta_logo.jpg" class="responsive-img"> </a>
+                <a href="http://colegiulvlahuta.ro" target="_blank"><img src="vlahuta_logo.jpg" class="responsive-img"> </a>
             </div>
         </div>
     </div>
