add icons to the contacts

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="#">Home</a></li>
                     <li><a href="our_team.html">Our Team</a></li>
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="#">About Us</a></li>
@@ -65,6 +66,7 @@
             <a href="#!" class="sidenav-close"> <i class="small material-icons white-text">close</i>
             </a>
         </li>
+        <li><a href="#">Home</a></li>
         <li><a href="our_team.html">Our Team</a></li>
         <li><a href="#">Contact Us</a></li>
         <li><a href="#">About Us</a></li>
@@ -124,8 +126,8 @@
             <div class="row">
                 <div class="col l6 s12 offset-s2">
                     <h4 class="white-text">Contact</h4>
-                    <h6 class="grey-text text-lighten-4">+4072334585475847435</h6>
-                    <h6 class="grey-text text-lighten-4">boogeybots@gmail.com</h6>
+                    <h6 class="grey-text text-lighten-4"><i class="fa fa-phone"></i> +4072334585475847435</h6>
+                    <h6 class="grey-text text-lighten-4"><i class="fa fa-envelope"></i> boogeybots@gmail.com</h6>
 
                 </div>
                 <div class="col l4 offset-l2 s12 offset-s2">
