--- a/our_team.html
+++ b/our_team.html
@@ -47,6 +47,7 @@
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="our_team.html" class="active">Our Team</a></li>
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="#">About Us</a></li>
@@ -63,7 +64,9 @@
             <a href="#!" class="sidenav-close"> <i class="small material-icons white-text">close</i>
             </a>
         </li>
-        <li><a href="our_team.html" class="active">Our Team</a></li>
+        <li><a href="index.html">Home</a></li>
+
+        <li><a href="#" class="active">Our Team</a></li>
         <li><a href="#">Contact Us</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="https://www.facebook.com/BoogeyBots.team/"><i class = "small left fa fa-facebook"></i></a></li>
