--- a/our_team.html
+++ b/our_team.html
@@ -229,8 +229,8 @@
             <div class="row">
                 <div class="col l6 s12 offset-s2">
                     <h4 class="white-text">Contact</h4>
-                    <h6 class="grey-text text-lighten-4">+4072334585475847435</h6>
-                    <h6 class="grey-text text-lighten-4">boogeybots@gmail.com</h6>
+                    <h6 class="grey-text text-lighten-4"><i class="fa fa-phone"></i> +4072334585475847435</h6>
+                    <h6 class="grey-text text-lighten-4"><i class="fa fa-envelope"></i> boogeybots@gmail.com</h6>
 
                 </div>
                 <div class="col l4 offset-l2 s12 offset-s2">
@@ -245,9 +245,9 @@
                         </li>
                         <li>
                             <span>
-                                    <a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "white-text small left fa fa-facebook"></i></a>
-                                    <a href="https://www.instagram.com/BoogeyBots/" target = "_blank"><i class = "white-text small fa fa-instagram"></i></a>
-                                </span>
+                                <a href="https://www.facebook.com/BoogeyBots.team/" target="_blank"><i class = "white-text small left fa fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/BoogeyBots/" target = "_blank"><i class = "white-text small fa fa-instagram"></i></a>
+                            </span>
                         </li>
 
                     </ul>
